# typescript-app-template

./: .pylintrc  README.md  TEMPLATE_CONFIG.json  TODO.txt  create_app.py  create_project.py  template_engine.py
template/: .gitignore  .prettierignore  .prettierrc  <ESCAPE_NAME>README.md  CODE_OF_CONDUCT.md  README.md  bundle.sh  eslint.config.js  meson.build  meson_options.txt  package.json  run.sh  tsconfig.json  update_potfiles.py  update_translation.sh
template/.github/workflows/: static_checks.yml
template/.zed/: settings.json  tasks.json
template/build-aux/: <TEMPLATE:APPID>.json  {{APP_ID}}.json
template/data/: <TEMPLATE:APPID>.desktop.in  <TEMPLATE:APPID>.gschema.xml  <TEMPLATE:APPID>.metainfo.xml.in  <TEMPLATE:APPID>.service.in  meson.build  {{APP_ID}}.data.gresource.xml  {{APP_ID}}.desktop.in  {{APP_ID}}.gschema.xml  {{APP_ID}}.metainfo.xml.in  {{APP_ID}}.service.in
template/data/icons/: icons.gresource.xml  meson.build  meson_icon_compile.py
template/gi-types/: dex-1.d.ts  gdk-4.0.d.ts  gdkwayland-4.0.d.ts  gi.d.ts  gly-2.d.ts  gtksource-5.d.ts  tracker-3.0.d.ts  tsparql-3.0.d.ts  webkit-6.0.d.ts
template/po/: meson.build
template/src/: <TEMPLATE:APPID>.data.gresources.xml  <TEMPLATE:APPID>.in  <TEMPLATE:APPID>.src.gresources.xml  config.json.in  config.ts  main.ts  meson.build  shortcuts-dialog.blp  ui.gresource.xml  {{APP_ID}}.data.gresources.xml  {{APP_ID}}.in  {{APP_ID}}.js
template/src/utils/: gobjectify.ts  property_helpers.ts
template/src/window/: main_window.blp  main_window.ts
template/tests/: README_TESTS.md  meson.build
template/types/: ambient.d.ts
